# CG-2020

./: .gitignore  Blatt01.vcxproj  Object.cpp  Object.h  README.md  Shape.cpp  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
Blatt01/CG-2020/: main.cpp
Vorlage2/: AbstractCube.h  Blatt05.sln  Blatt05.vcxproj  CMakeLists.txt  CubeSharp.h  CubeSmooth.h  Object.h  main.cpp
x64/Debug/: Blatt01.ilk  vc142.idb
x64/Debug/Blatt01.tlog/: Blatt01.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
